Auto-Encoding Masking code base

--- a/masking.ipynb
+++ b/masking.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -43,137 +45,25 @@
     "\n",
     "\n",
     "\n",
-    "def patch_mask(x, mask_ratio, patch_len=12, stride=12):\n",
-    "    px = x.clone().permute(0, 2, 1)\n",
-    "\n",
-    "    padding_patch_layer = nn.ReplicationPad1d((0, stride))\n",
-    "    px = padding_patch_layer(px)\n",
-    "    px = px.unfold(dimension=-1, size=patch_len, step=stride)\n",
-    "    px = torch.reshape(px, (px.shape[0] * px.shape[1], px.shape[2], px.shape[3]))\n",
-    "\n",
-    "    mask = generate_binomial_mask(px.size(0), px.size(1), p=mask_ratio).to(x.device)\n",
-    "\n",
-    "    return mask\n",
-    "\n",
     "mask = patch_mask(x, mask_rate, patch_len, stride)\n",
     "mask = expand_tensor(mask, patch_len)\n",
     "mask = mask.reshape(b, c, -1)[:, :, :s].permute(0, 2, 1)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 0, 1, 1, 1, 1, 1],\n",
-       "         [1, 0, 1, 1, 1, 1, 1],\n",
-       "         [1, 0, 1, 1, 1, 1, 1],\n",
-       "         [1, 0, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 0, 1, 1, 1, 1],\n",
-       "         [1, 1, 0, 1, 1, 1, 1],\n",
-       "         [1, 1, 0, 1, 1, 1, 1],\n",
-       "         [1, 1, 0, 1, 1, 1, 1],\n",
-       "         [0, 1, 1, 1, 1, 1, 1],\n",
-       "         [0, 1, 1, 1, 1, 1, 1],\n",
-       "         [0, 1, 1, 1, 1, 1, 1],\n",
-       "         [0, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 0, 1, 1, 1, 0],\n",
-       "         [1, 1, 0, 1, 1, 1, 0],\n",
-       "         [1, 1, 0, 1, 1, 1, 0],\n",
-       "         [1, 1, 0, 1, 1, 1, 0],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 0, 1, 1, 0, 1, 1],\n",
-       "         [1, 0, 1, 1, 0, 1, 1],\n",
-       "         [1, 0, 1, 1, 0, 1, 1],\n",
-       "         [1, 0, 1, 1, 0, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 0, 1, 1],\n",
-       "         [1, 1, 1, 1, 0, 1, 1],\n",
-       "         [1, 1, 1, 1, 0, 1, 1],\n",
-       "         [1, 1, 1, 1, 0, 1, 1],\n",
-       "         [0, 1, 1, 1, 1, 0, 1],\n",
-       "         [0, 1, 1, 1, 1, 0, 1],\n",
-       "         [0, 1, 1, 1, 1, 0, 1],\n",
-       "         [0, 1, 1, 1, 1, 0, 1],\n",
-       "         [1, 0, 1, 1, 1, 1, 1],\n",
-       "         [1, 0, 1, 1, 1, 1, 1],\n",
-       "         [1, 0, 1, 1, 1, 1, 1],\n",
-       "         [1, 0, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 0, 1, 0, 1, 1],\n",
-       "         [1, 1, 0, 1, 0, 1, 1],\n",
-       "         [1, 1, 0, 1, 0, 1, 1],\n",
-       "         [1, 1, 0, 1, 0, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 0, 1],\n",
-       "         [1, 1, 1, 1, 1, 0, 1],\n",
-       "         [1, 1, 1, 1, 1, 0, 1],\n",
-       "         [1, 1, 1, 1, 1, 0, 1],\n",
-       "         [1, 1, 0, 1, 1, 1, 1],\n",
-       "         [1, 1, 0, 1, 1, 1, 1],\n",
-       "         [1, 1, 0, 1, 1, 1, 1],\n",
-       "         [1, 1, 0, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 0, 1, 0, 1, 1, 1],\n",
-       "         [1, 0, 1, 0, 1, 1, 1],\n",
-       "         [1, 0, 1, 0, 1, 1, 1],\n",
-       "         [1, 0, 1, 0, 1, 1, 1],\n",
-       "         [1, 1, 1, 0, 0, 1, 1],\n",
-       "         [1, 1, 1, 0, 0, 1, 1],\n",
-       "         [1, 1, 1, 0, 0, 1, 1],\n",
-       "         [1, 1, 1, 0, 0, 1, 1],\n",
-       "         [1, 1, 1, 0, 1, 1, 1],\n",
-       "         [1, 1, 1, 0, 1, 1, 1],\n",
-       "         [1, 1, 1, 0, 1, 1, 1],\n",
-       "         [1, 1, 1, 0, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 0, 1],\n",
-       "         [1, 1, 1, 1, 1, 0, 1],\n",
-       "         [1, 1, 1, 1, 1, 0, 1],\n",
-       "         [1, 1, 1, 1, 1, 0, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [1, 1, 1, 1, 1, 1, 1],\n",
-       "         [0, 1, 1, 1, 1, 1, 1],\n",
-       "         [0, 1, 1, 1, 1, 1, 1],\n",
-       "         [0, 1, 1, 1, 1, 1, 1],\n",
-       "         [0, 1, 1, 1, 1, 1, 1]]], dtype=torch.int32)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
     }
-   ],
+   },
    "source": [
     "mask.int()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
